feat: create auth middleware and create refresh token and logout endpoints
