# features/auth/domain/usecases/validate_login_uc.go
@@ -2,25 +2,27 @@ package usecases
 
 import (
 	"github.com/RodolfoBonis/go_boilerplate/core/utils"
-	"github.com/RodolfoBonis/go_boilerplate/features/login/domain/entities"
+	"github.com/RodolfoBonis/go_boilerplate/features/auth/domain/entities"
 	"github.com/gin-gonic/gin"
 	"net/http"
 )
 
 // ValidateLogin godoc
-// @Summary Validate login
+// @Summary Validate auth
 // @Schemes
-// @Description performs login of user
-// @Tags login
+// @Description performs auth of user
+// @Tags Auth
 // @Accept json
 // @Produce json
 // @Param _ body entities.RequestLoginEntity true "Login Data"
 // @Success 200 {object} entities.LoginResponseEntity
 // @Failure 400 {object} utils.HttpError
+// @Failure 401 {object} utils.HttpError
+// @Failure 403 {object} utils.HttpError
 // @Failure 409 {object} utils.HttpError
 // @Failure 500 {object} utils.HttpError
-// @Router /login [post]
-func (uc *LoginUseCase) ValidateLogin(c *gin.Context) {
+// @Router /auth [post]
+func (uc *AuthUseCase) ValidateLogin(c *gin.Context) {
 	loginData := new(entities.RequestLoginEntity)
 
 	err := c.BindJSON(loginData)
